[gd_scene load_steps=7 format=3 uid="uid://bs6wse43isodu"]

[ext_resource type="Script" path="res://UI/GameLose.gd" id="1_l03cr"]
[ext_resource type="Texture2D" uid="uid://cxikvsfwqnvd0" path="res://textures/loser.png" id="2_jqoxi"]
[ext_resource type="FontFile" uid="uid://c1makj6cvdpst" path="res://Fonts/Staatliches-Regular.ttf" id="3_a8vqr"]
[ext_resource type="FontFile" uid="uid://bjq455yadsbg3" path="res://Fonts/PrincessSofia-Regular.ttf" id="4_plxmy"]
[ext_resource type="StyleBox" uid="uid://da76i8m3p7n0l" path="res://Materials/button_style.tres" id="5_5s2ev"]
[ext_resource type="StyleBox" uid="uid://bnevn0320slmw" path="res://Materials/button_hover_style.tres" id="6_f2qfm"]

[node name="GameLoseScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l03cr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
offset_left = 728.0
offset_top = 80.0
offset_right = 993.0
offset_bottom = 208.0
scale = Vector2(1.84, 3.52)
texture = ExtResource("2_jqoxi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
offset_left = 736.0
offset_top = 531.0
offset_right = 1078.0
offset_bottom = 910.0
scale = Vector2(1.41863, 1.07735)

[node name="BallHitsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_a8vqr")
theme_override_font_sizes/font_size = 50
text = "ball hits:"

[node name="FinalTimeLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_a8vqr")
theme_override_font_sizes/font_size = 50
text = "Final time:"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_plxmy")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("5_5s2ev")
theme_override_styles/hover = ExtResource("6_f2qfm")
text = "Restart
"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4_plxmy")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = ExtResource("5_5s2ev")
theme_override_styles/hover = ExtResource("6_f2qfm")
text = "Main menu
"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
